# retrivio

./: .gitignore  Cargo.toml  LICENSE  README.md  retrivio
.github/branding/: README.md
.github/workflows/: ci-python.yml  ci-rust.yml  ci-typescript.yml  release.yml
Formula/: retrivio.rb
crates/retrivio/: Cargo.toml
crates/retrivio/src/: lance_store.rs  main.rs
crates/retrivio/src/code_intel/: ast_chunker.rs  chunk_header.rs  import_graph.rs  lang_support.rs  mod.rs  symbol_index.rs
docs/: DISTRIBUTION.md
scripts/: install.sh  publish-gh-api.sh  retrivio-bedrock-refresh.sh  retrivio-shell.sh
